# polar-bear

./: .gitignore  DEBUGGING_REPORT.md  HIVEMIND_README.md  INTEGRATION_DOCUMENTATION.md  Msnst-method.py  Murtaza.py  POLAR_BEAR_SYSTEM_README.md  __init__-s.py  __init__.py  advanced-feature-extractor-30.py  advanced_monitoring_system.py  anomaly-detection-ai-39.py  anomaly_detector-26.py  auto-git-batch.bat  auto-git-loop.bat  auto-git-loop.ps1  cnn_tutorial_implementation.py  cnn_visualization_script.py  connector-19.py  defect_detector - Shortcut.lnk  demo_hivemind_client-22.py  detect-tutor.py  directory-analyzer.py  do2mr-method-runner-35.py  file_tree_visualizer.py  generated.pt  hivemind_connector-31.py  image-preparation-tool.py  instrumented_speed-test.py  integration_test_suite.py  lei-scratch-detector-35.py  machine-learning-detector-32.py  neural_hivemind.py  neural_hivemind_web.py  nn_from_scratch.py  organizer.py  pixel_generator-19.py  polar_bear_brain.py  polar_bear_hivemind.py  polar_bear_master.py  (+33 more)
Network/: COMPREHENSIVE_SYSTEM_DOCUMENTATION.md  anomaly_detector.py  architectures.py  augmentation.py  check_resources.slurm  cleanup_data_dirs.sh  config.yaml  config_loader.py  config_visualizer.py  data_loader.py  feature_extractor.py  fiber_advanced_architectures.py  fiber_advanced_config.yaml  fiber_advanced_config_loader.py  fiber_advanced_losses.py  fiber_advanced_optimizers.py  fiber_advanced_similarity.py  fiber_anomaly_detector.py  fiber_config.py  fiber_config_visualizer.py  fiber_data_loader.py  fiber_enhanced_integrated_network.py  fiber_enhanced_trainer.py  fiber_feature_extractor.py  fiber_hybrid_optimizer.py  fiber_integrated_network.py  fiber_logger.py  fiber_main.py  fiber_reference_comparator.py  fiber_requirements.txt  fiber_tensor_processor.py  fiber_trainer.py  fiber_visualization_ui.py  fiber_visualizer.py  goal.txt  hybrid_optimizer.py  integrated_network.py  logger.py  losses.py  main.py  (+19 more)
New folder/: README.md  REFACTORING_SUMMARY.md  base.py  run_examples.sh
Refractored/: app.py  config.py  config.yaml  dataset  dataset.py  evaluator.py  losses.py  main.py  model.py  optimizer.py  reference  requirements.txt  run_job.slurm  test_all.py  trainer.py  utils.py
additional_modules/: defect_detection.py  do2mr_lei_detector.py  llama_vision_finetuner.py  (+2 more)
docs/: README.md  (+3 more)
old-processes/C++ Method/: accelerator.cp313-win_amd64.pyd  advanced_scratch_detection.py  calibration.json  pyproject.toml  reporting.py  unet_segmentation.py
old_scripts/: CMakeLists.txt  detection_v3.py
old_scripts/C++ Method/: main.py  train_advanced_models.py
old_scripts/C++ Method/accelerator.egg-info/: requires.txt
old_scripts/research_focused_method/: calibration.py  image_processing.py  requirements.txt
old_scripts/test8.12/Test10/: processing_and_detection.py
old_scripts/test8.12/Test12/: advanced_fiber_inspector.py
(+3011 files in other folders)
